tests/paczka1/small_fuzzy/33409531.err
Error in line 2: fRCbv A976 87,6
Error in line 4: N3TUBGuU7LH A976 31,1
Error in line 8: QERNcYay S472 10,4
